--- a/connectors/cassandra/meta/playbooks/roles/cassandra_client/tasks/main.yml
+++ b/connectors/cassandra/meta/playbooks/roles/cassandra_client/tasks/main.yml
@@ -4,7 +4,7 @@
     repo='https://github.com/datastax/cpp-driver.git'
     accept_hostkey=yes
     clone=yes
-    dest='{{cache_dir}}/cassandra_cpp'
+    dest='{{third_party_dir}}/cassandra_cpp'
     update=yes
     recursive=yes
     version='2.3.0'
@@ -13,18 +13,18 @@
 - name: Make build dir
   file:
     state=directory
-    path='{{cache_dir}}/cassandra_cpp/build'
+    path='{{third_party_dir}}/cassandra_cpp/build'
 
 - name: Create Makefile with cmake
   command: cmake -DCASS_BUILDSTATIC=1 -DCASS_BUILD_STATIC=0 \
-                 -DCMAKE_INSTALL_PREFIX:PATH="{{third_party_dir}}" \
-                 "{{cache_dir}}/cassandra_cpp/"
+                 -DCMAKE_INSTALL_PREFIX:PATH="{{cache_dir}}" \
+                 "{{third_party_dir}}/cassandra_cpp/"
   args:
-    chdir: '{{cache_dir}}/cassandra_cpp/build'
-    creates: '{{cache_dir}}/cassandra_cpp/build/Makefile'
+    chdir: '{{third_party_dir}}/cassandra_cpp/build'
+    creates: '{{third_party_dir}}/cassandra_cpp/build/Makefile'
 
 - name: Build && install
   command: make -j{{ansible_processor_vcpus}} install
   args:
-    chdir: '{{cache_dir}}/cassandra_cpp/build'
-    creates: '{{third_party_dir}}/lib/libcassandra_static.a'
+    chdir: '{{third_party_dir}}/cassandra_cpp/build'
+    creates: '{{cache_dir}}/lib/libcassandra_static.a'
