Importing correct dependencies

--- a/connectors/cassandra/Dockerfile
+++ b/connectors/cassandra/Dockerfile
@@ -3,7 +3,8 @@ FROM concord/runtime_executor:0.4.3.1
 RUN apt-get -y install \
     libboost-context1.55.0
 
-COPY third_party /usr/local
+COPY meta/tmp/include /usr/include
+COPY meta/tmp/lib /usr/lib
 COPY build/cassandra_pumper /usr/local/bin
 
 WORKDIR /
