--- a/connectors/kafka/meta/playbooks/roles/librdkafka/tasks/main.yml
+++ b/connectors/kafka/meta/playbooks/roles/librdkafka/tasks/main.yml
@@ -1,5 +1,14 @@
 ---
 
+- name: Install librdkafka development dependencies
+  sudo: yes
+  apt:
+    name=libsasl2-dev
+    state=installed
+    update_cache=yes
+    cache_valid_time=3600
+    force=yes
+
 - name: Sync soure from git
   git:
     repo='https://github.com/senior7515/librdkafka.git'
